--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,5 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material 
       - run: pip install pillow cairosvg
+      - run: pip install mkdocs-minify-plugin
       - run: mkdocs gh-deploy --force
