--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,8 +39,8 @@ theme:
                 logo: fontawesome/solid/computer
         features:
                 - announce.dismiss
-                - content.action.edit
-                - content.action.view
+                #- content.action.edit
+                #- content.action.view
                 - content.code.annotate
                 - content.code.copy
                 # - content.tabs.link
