--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,12 +28,15 @@ nav:
           - Conceitos básicos da segurança:  infosec/seguranca.md
           - Malware: infosec/malware.md
         - Perguntas Frequentes: faq.md
-        - Sobre: about.md
+        - Sobre: 
+                - Ajuda: sobre/about.md
+                - A empresa: sobre/empresa.md
 
 
 # Configuration
 theme:
         name: material
+        custom_dir: overrides
         language: pt-BR
         icon:
                 logo: fontawesome/solid/computer
@@ -108,6 +111,11 @@ extra:
         lazy_load: true
         align: center
 
+# CSS
+extra_css:
+        - 'assets/css/extra.css'
+
+
 # Plugins
 plugins:
         - search:
@@ -142,8 +150,8 @@ markdown_extensions:
         - pymdownx.keys
         - pymdownx.magiclink:
                 repo_url_shorthand: true
-                user: squidfunk
-                repo: mkdocs-material
+                user: meumicro
+                repo: meumicro.github.io
         - pymdownx.mark
         - pymdownx.smartsymbols
         - pymdownx.superfences:
